# pydocs-mcp

./: .coverage  .editorconfig  .env.example  .gitignore  .mailmap  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DOCUMENTATION.md  EXTENSIONS.md  IDEAS.md  INSTALL.md  LICENSE  LICENSE-third-party  Makefile  PAGEINDEX_DIVS.md  README.md  SECURITY.md  SPEC.md  complexipy-snapshot.json  pyproject.toml
benchmarks/: .gitignore  AGENT_TRACK.md  EXPERIMENTS.md  README.md  pyproject.toml  requirements.txt
benchmarks/baselines/: graph_default_ab.json  hybrid_fusion_330m.json  method_comparison.json  repoqa_fixture_baseline.json  repoqa_snf.json  reranker_model_comparison.json  structural_recall.json
benchmarks/benchmarks/: charts.py  context7_bench.py  context7_client.py  dataset_gen.py  fake_project.py  indexer_bench.py  neuledge_bench.py  neuledge_client.py  runner.py  search_bench.py
benchmarks/benchmarks/eval/: ast_match.py  ci_compare.py  corpus.py  protocols.py  report.py  runner.py  serialization.py
benchmarks/configs/: baseline.yaml  bm25.yaml  bm25_tree_rerank.yaml  bm25_tree_rerank_gpt55.yaml  composite.yaml  dense.yaml  dense_f2llm.yaml  dense_f2llm330m.yaml  dense_graph.yaml  dense_graph_centrality_f2llm330m.yaml  dense_graph_f2llm330m.yaml  dense_graph_mentions_f2llm330m.yaml  dense_graph_mentions_weighted_f2llm330m.yaml  dense_modernbert.yaml  dense_st.yaml  dense_tree_rerank_gpt55.yaml  ds1000_bm25.yaml  ds1000_composite.yaml  ds1000_hybrid_li_rrf.yaml  ds1000_late_interaction.yaml  ds1000_ranked.yaml  ds1000_tree.yaml  graph_hybrid_f2llm330m.yaml  hybrid_li_rrf.yaml  hybrid_li_wsi.yaml  hybrid_rrf_k100.yaml  hybrid_rrf_k100_f2llm330m.yaml  hybrid_rrf_k30.yaml  hybrid_rrf_k30_f2llm330m.yaml  hybrid_rrf_k60.yaml  hybrid_rrf_k60_f2llm330m.yaml  hybrid_rrf_k60_norerank.yaml  hybrid_tree.yaml  hybrid_wsi_balanced.yaml  hybrid_wsi_balanced_f2llm330m.yaml  hybrid_wsi_bm25.yaml  hybrid_wsi_bm25_f2llm330m.yaml  hybrid_wsi_dense.yaml  hybrid_wsi_dense_f2llm330m.yaml  large_member_cap.yaml  (+63 more)
benchmarks/configs/pipelines/: exp_bm25.yaml  exp_bm25_tree_rerank.yaml  exp_dense.yaml  exp_dense_graph.yaml  exp_dense_graph_centrality.yaml  exp_dense_graph_mentions.yaml  exp_dense_graph_mentions_weighted.yaml  exp_dense_tree_rerank.yaml  exp_hybrid_graph.yaml  exp_hybrid_li_rrf.yaml  exp_hybrid_li_wsi.yaml  exp_hybrid_rrf_k100.yaml  exp_hybrid_rrf_k30.yaml  exp_hybrid_rrf_k45.yaml  exp_hybrid_rrf_k60.yaml  exp_hybrid_rrf_k60_norerank.yaml  exp_hybrid_rrf_k75.yaml  exp_hybrid_tree.yaml  exp_hybrid_wsi_balanced.yaml  exp_hybrid_wsi_bm25.yaml  exp_hybrid_wsi_bm25_mild.yaml  exp_hybrid_wsi_dense.yaml  exp_hybrid_wsi_dense_mild.yaml  exp_late_interaction.yaml  exp_li.yaml  exp_parent_rollup.yaml  exp_parent_rollup_baseline.yaml  exp_tree.yaml  ingestion_late_interaction.yaml
benchmarks/data/checkpoints/: neuledge.csv
benchmarks/data/results/: benchmark_results.csv  indexing_results.csv
benchmarks/data/swe/: overlap-report.md  pro-touch-log.jsonl
benchmarks/docs/campaign/: cost-model.md  provenance-note.md  runbook.md
benchmarks/docs/trajectory/: README.md  adding-a-metric.md  config-reference.md  metric-definitions.md  schema-reference.md
benchmarks/fake_project/: __init__.py  api.py  models.py  utils.py
benchmarks/fixtures/: structural_recall.json
benchmarks/fixtures/ds1000_reference_project/: README.md  pyproject.toml
benchmarks/reports/late_interaction_eval/: README.md
benchmarks/reports/small_test_eval/: README.md  jsonl_to_baseline.py
benchmarks/scripts/: build_structural_recall.py  compare_dense_rerank.sh  plot_graph_default_ab.py  plot_hybrid_fusion_330m.py  plot_method_comparison.py  plot_reranker_model_comparison.py  plot_structural_recall.py  run_eval_gpu.sh
benchmarks/src/pydocs_eval/: _bench_cache.py  _retrieval_extra.py  ast_match.py  baseline_record.py  bench_cache_cli.py  ci_compare.py  corpus.py  gold_resolver.py  plotting.py  registries.py  report.py  runner.py  serialization.py  sweep.py  sweep_support.py
benchmarks/tests/: conftest.py  test_context7_client.py  test_dataset_gen.py  test_fake_project.py  test_registry_population.py  test_retrieval_extra_guards.py
benchmarks/tests/agent_track/: test_command.py  test_injection.py  test_judge.py  test_orchestrator.py  test_preflight.py  test_report.py  test_types.py
benchmarks/tests/campaign/: test_aggregator.py  test_budget.py  test_cells.py  test_cli_strata.py  test_index_cache.py  test_ledger.py  test_lockfile.py  test_overlay_resolver.py  test_prebuild.py  test_runner.py  test_smoke.py  test_strata.py
benchmarks/tests/core/: test_all_overlay_configs_load.py  test_bench_cache.py  test_bench_cache_cli.py  test_bench_cache_fidelity.py  test_bench_cache_integration.py  test_dense_tree_rerank_config_load.py  test_ds1000_configs_load.py  test_ds1000_smoke.py  test_graph_mentions_configs_load.py  test_integration_empty.py  test_integration_oracle.py  test_li_ingestion_configs_resolve_shipped.py  test_programmatic_surface.py  test_retrieval_extra_guards.py  test_runner_bench_cache_flag.py  test_runner_ds1000_filter.py  test_runner_report_path.py  test_runner_smoke.py  test_runner_timing_cache_hit.py  test_swe_qa_runner_smoke.py  test_sweep_decomposition.py
benchmarks/tests/datasets/: test_citation_extraction.py  test_corpus.py  test_ds1000_dataset.py  test_ds1000_reference_project_fixture.py  test_ds1000_split.py  test_ds1000_stratified_fixture.py  test_repoqa_loader.py  test_repoqa_split.py  test_structural_recall_dataset.py  test_swe_qa_loaders.py
benchmarks/tests/datasets_swe/: test_committed_artifacts.py  test_discriminative.py  test_download_normalization.py  test_overlap.py  test_pins.py  test_records.py  test_splits.py  test_touch_log.py
benchmarks/tests/eval/: test_aggregate.py  test_ast_match.py  test_ast_match_robust.py  test_baseline_record.py  test_bench_cache.py  test_bench_cache_cli.py  test_bench_cache_fidelity.py  test_bench_cache_integration.py  test_ci_compare.py  test_citation_extraction.py  test_context7_client.py  test_context7_oracle.py  (+60 more)
(+1533 files in other folders)
